<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.MainActivity5">

    <LinearLayout
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:scaleType="centerCrop"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/telaperdedor">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/campotexto"
            android:text="@string/texto1_telaPerdedor"
            android:textAlignment="center"
            android:textSize="26sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="500dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:background="@drawable/campotextoatributo"
            android:text="@string/texto_telaPerdedor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/campotextoatributo"
            android:text="@string/texto2_telaVencedor"/>

        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/btn_telaVencedor" />

    </LinearLayout>

</LinearLayout>